objects/CC_Call_Script__c.object
<CustomObject>
    <fields>
        <fullName>Default_Call_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1: The call script which can be defined as default</description>
        <inlineHelpText>Check mark if this Call Script constitutes to default Call Script</inlineHelpText>
        <label>Default Call Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Language__c</fullName>
        <description>NGCC Phase1: Set default language for a Call Script</description>
        <inlineHelpText>Select default lanugage for the Call Script</inlineHelpText>
        <label>Default Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Danish: da</fullName>
                </value>
                <value>
                    <fullName>Dutch: nl_NL</fullName>
                </value>
                <value>
                    <fullName>English: en_US</fullName>
                </value>
                <value>
                    <fullName>Finnish: fi</fullName>
                </value>
                <value>
                    <fullName>French: fr</fullName>
                </value>
                <value>
                    <fullName>German: de</fullName>
                </value>
                <value>
                    <fullName>Italian: it</fullName>
                </value>
                <value>
                    <fullName>Japanese: ja</fullName>
                </value>
                <value>
                    <fullName>Korean: ko</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil): pt_BR</fullName>
                </value>
                <value>
                    <fullName>Russian: ru</fullName>
                </value>
                <value>
                    <fullName>Spanish: es</fullName>
                </value>
                <value>
                    <fullName>Swedish: sv</fullName>
                </value>
                <value>
                    <fullName>Thai: th</fullName>
                </value>
                <value>
                    <fullName>Arabic: ar</fullName>
                </value>
                <value>
                    <fullName>Czech: cs</fullName>
                </value>
                <value>
                    <fullName>Greek: el</fullName>
                </value>
                <value>
                    <fullName>Hungarian: hu</fullName>
                </value>
                <value>
                    <fullName>Polish: pl</fullName>
                </value>
                <value>
                    <fullName>Turkish: tr</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified: zh_CN</fullName>
                </value>
                <value>
                    <fullName>Vietnamese: vi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelect_Count__c</fullName>
        <description>NGCC Phase1: Shows the count of MultiSelect Question the Call Script</description>
        <inlineHelpText>Count of the MultiSelect Questions in the Call Script</inlineHelpText>
        <label>MultiSelect Count</label>
        <summaryFilterItems>
            <field>CC_Call_Script_Q_A__c.Question_Type__c</field>
            <operation>equals</operation>
            <value>MultiSelect</value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Call_Script_Q_A__c.Call_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Question_Category__c</fullName>
        <description>NGCC Phase1: Count of Total number of Questions having Question Category for Validation</description>
        <inlineHelpText>Count of Total number of Questions having Question Category for Validation</inlineHelpText>
        <label>Number of Question Category</label>
        <summaryFilterItems>
            <field>CC_Call_Script_Q_A__c.Question_Category__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Call_Script_Q_A__c.Call_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Question_Type__c</fullName>
        <description>NGCC Phase1: Count of Total number of Questions having Question Type for Validation</description>
        <inlineHelpText>Count of Total number of Questions having Question Type for Validation</inlineHelpText>
        <label>Number of Question Type</label>
        <summaryFilterItems>
            <field>CC_Call_Script_Q_A__c.Question_Type__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CC_Call_Script_Q_A__c.Call_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Preview_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NGCC Phase1: Number of times the Call Script was Previewed</description>
        <inlineHelpText>Number of times the Call Script was Previewed</inlineHelpText>
        <label>Preview Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Categories__c</fullName>
        <description>NGCC Phase1: The Tab definition of particular where it should be shown in the Call Script</description>
        <inlineHelpText>The Tab where the Question need to be presented in the Call Script</inlineHelpText>
        <label>Question Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Eloqua</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>NGCC Phase1: Current Status of the Call Script</description>
        <inlineHelpText>Shows the Current Status of the Call Script</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Previewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>NGCC Phase1: Call Script Theater where the Call Script will be Used</description>
        <inlineHelpText>Call Script Theater where the Call Script will be Used</inlineHelpText>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Questions__c</fullName>
        <description>NGCC Phase1: Count of Total number of Questions assigned in the Call Script</description>
        <inlineHelpText>Count of Total number of Questions assigned in the Call Script</inlineHelpText>
        <label>Total Questions</label>
        <summaryForeignKey>CC_Call_Script_Q_A__c.Call_Script__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <description>NGCC Phase1: Call Script master object which defines call scripts and its current status. Call Script can be edited only if the call script is in draft or inactive.</description>
    <label>CC Call Script</label>
    <nameField>
        <label>CC Call Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Call Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NGCC_Multiselect_limit_per_Call_Script</fullName>
        <active>true</active>
        <description>Validate to make sure not more than 10 multiselect is assigned to a call script</description>
        <errorConditionFormula>MultiSelect_Count__c &gt;10</errorConditionFormula>
        <errorMessage>You can not assign more than 10 multiselect per call script</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validate_Activating_Call_Script</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Status__c,'Active')|| ISPICKVAL(Status__c,'Previewed'),IF( AND(Total_Questions__c = Number_of_Question_Category__c, Total_Questions__c = Number_of_Question_Type__c),false,true),false)</errorConditionFormula>
        <errorMessage>Please correct Call Script Q&amp;A's as there are some missing Question Type or Question Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validation_for_Call_Script_Status</fullName>
        <active>true</active>
        <description>US5775 - Call Script Validations Sprint 4

If CC Call Script is Active it cannot be modified</description>
        <errorConditionFormula>IF(ISCHANGED(Status__c),false,ISPICKVAL(Status__c,'Active'))</errorConditionFormula>
        <errorMessage>You cant update for active Call Script</errorMessage>
    </validationRules>
</CustomObject>